Fix chart heights with wrapper divs

--- a/ri-report.html
+++ b/ri-report.html
@@ -40,7 +40,8 @@
  h2::after { content: ''; flex: 1; height: 2px; background: linear-gradient(90deg, rgba(99,102,241,0.5), transparent); }
  
  .chart-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; }
- .chart-card { background: rgba(255,255,255,0.03); padding: 1.5rem; border-radius: 16px; border: 1px solid rgba(255,255,255,0.08); max-height: 320px; }
+ .chart-card { background: rgba(255,255,255,0.03); padding: 1.5rem; border-radius: 16px; border: 1px solid rgba(255,255,255,0.08); }
+.chart-wrapper { position: relative; height: 250px; }
  .chart-card.full { grid-column: span 2; }
  .chart-card.third { grid-column: span 1; }
  .chart-title { font-size: 1rem; color: #94a3b8; margin-bottom: 1rem; }
@@ -531,56 +532,56 @@
  <h2>Market Trends</h2>
  <div class="chart-grid">
  <div class="chart-card full">
- <div class="chart-title">Monthly Sales Volume & Average Price (24 Months)</div>
- <canvas id="trendChart" height="100"></canvas>
+ <div class="chart-title">📈 Monthly Sales Volume & Average Price (24 Months)</div>
+ <div class="chart-wrapper" style="height:120px"><canvas id="trendChart"></canvas></div>
  </div>
  <div class="chart-card">
- <div class="chart-title">Sales by City (Top 15)</div>
- <canvas id="cityChart" height="300"></canvas>
+ <div class="chart-title">🏙️ Sales by City (Top 15)</div>
+ <div class="chart-wrapper" style="height:300px"><canvas id="cityChart"></canvas></div>
  </div>
  <div class="chart-card">
- <div class="chart-title">Median Price by City</div>
- <canvas id="priceChart" height="300"></canvas>
+ <div class="chart-title">💵 Median Price by City</div>
+ <div class="chart-wrapper" style="height:300px"><canvas id="priceChart"></canvas></div>
  </div>
  </div>
  
  <h2>Price Analysis</h2>
  <div class="chart-grid">
  <div class="chart-card">
- <div class="chart-title">Price Distribution (Histogram)</div>
- <canvas id="histogramChart" height="250"></canvas>
+ <div class="chart-title">💰 Price Distribution</div>
+ <div class="chart-wrapper"><canvas id="histogramChart"></canvas></div>
  </div>
  <div class="chart-card">
- <div class="chart-title">Price per Sq Ft by City</div>
- <canvas id="ppsqftChart" height="250"></canvas>
+ <div class="chart-title">📊 Price per Sq Ft by City</div>
+ <div class="chart-wrapper"><canvas id="ppsqftChart"></canvas></div>
  </div>
  <div class="chart-card">
- <div class="chart-title">Property Type Breakdown</div>
- <canvas id="typeChart" height="250"></canvas>
+ <div class="chart-title">🏠 Property Type Breakdown</div>
+ <div class="chart-wrapper"><canvas id="typeChart"></canvas></div>
  </div>
  <div class="chart-card">
- <div class="chart-title">Days on Market by Price Range</div>
- <canvas id="domChart" height="250"></canvas>
+ <div class="chart-title">📅 Days on Market by Price</div>
+ <div class="chart-wrapper"><canvas id="domChart"></canvas></div>
  </div>
  </div>
  
  <h2>Property Characteristics</h2>
  <div class="chart-grid">
  <div class="chart-card">
- <div class="chart-title">Bedroom Distribution</div>
- <canvas id="bedsChart" height="250"></canvas>
+ <div class="chart-title">🛏️ Bedrooms Distribution</div>
+ <div class="chart-wrapper"><canvas id="bedsChart"></canvas></div>
  </div>
  <div class="chart-card">
- <div class="chart-title">Year Built Distribution</div>
- <canvas id="yearBuiltChart" height="250"></canvas>
+ <div class="chart-title">🏗️ Year Built</div>
+ <div class="chart-wrapper"><canvas id="yearBuiltChart"></canvas></div>
  </div>
  <div class="chart-card">
- <div class="chart-title">Square Footage Distribution</div>
- <canvas id="sqftChart" height="250"></canvas>
+ <div class="chart-title">📐 Square Footage Distribution</div>
+ <div class="chart-wrapper"><canvas id="sqftChart"></canvas></div>
  </div>
  <div class="chart-card">
  <div class="chart-title">🌿 Land Sales by City</div>
- <canvas id="landChart" height="250"></canvas>
+ <div class="chart-wrapper"><canvas id="landChart"></canvas></div>
  </div>
  </div>
 
