--- a/ri-report.html
+++ b/ri-report.html
@@ -41,7 +41,7 @@
  
  .chart-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; }
  .chart-card { background: rgba(255,255,255,0.03); padding: 1.5rem; border-radius: 16px; border: 1px solid rgba(255,255,255,0.08); }
-.chart-wrapper { position: relative; height: 250px; }
+.chart-card canvas { max-height: 250px !important; }
  .chart-card.full { grid-column: span 2; }
  .chart-card.third { grid-column: span 1; }
  .chart-title { font-size: 1rem; color: #94a3b8; margin-bottom: 1rem; }
@@ -533,15 +533,15 @@
  <div class="chart-grid">
  <div class="chart-card full">
  <div class="chart-title">📈 Monthly Sales Volume & Average Price (24 Months)</div>
- <div class="chart-wrapper" style="height:120px"><canvas id="trendChart"></canvas></div>
+ <canvas id="trendChart" style="max-height:120px"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">🏙️ Sales by City (Top 15)</div>
- <div class="chart-wrapper" style="height:300px"><canvas id="cityChart"></canvas></div>
+ <canvas id="cityChart" style="max-height:300px"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">💵 Median Price by City</div>
- <div class="chart-wrapper" style="height:300px"><canvas id="priceChart"></canvas></div>
+ <canvas id="priceChart" style="max-height:300px"></canvas>
  </div>
  </div>
  
@@ -549,19 +549,19 @@
  <div class="chart-grid">
  <div class="chart-card">
  <div class="chart-title">💰 Price Distribution</div>
- <div class="chart-wrapper"><canvas id="histogramChart"></canvas></div>
+ <canvas id="histogramChart"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">📊 Price per Sq Ft by City</div>
- <div class="chart-wrapper"><canvas id="ppsqftChart"></canvas></div>
+ <canvas id="ppsqftChart"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">🏠 Property Type Breakdown</div>
- <div class="chart-wrapper"><canvas id="typeChart"></canvas></div>
+ <canvas id="typeChart"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">📅 Days on Market by Price</div>
- <div class="chart-wrapper"><canvas id="domChart"></canvas></div>
+ <canvas id="domChart"></canvas>
  </div>
  </div>
  
@@ -569,19 +569,19 @@
  <div class="chart-grid">
  <div class="chart-card">
  <div class="chart-title">🛏️ Bedrooms Distribution</div>
- <div class="chart-wrapper"><canvas id="bedsChart"></canvas></div>
+ <canvas id="bedsChart"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">🏗️ Year Built</div>
- <div class="chart-wrapper"><canvas id="yearBuiltChart"></canvas></div>
+ <canvas id="yearBuiltChart"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">📐 Square Footage Distribution</div>
- <div class="chart-wrapper"><canvas id="sqftChart"></canvas></div>
+ <canvas id="sqftChart"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">🌿 Land Sales by City</div>
- <div class="chart-wrapper"><canvas id="landChart"></canvas></div>
+ <canvas id="landChart"></canvas>
  </div>
  </div>
 
@@ -3382,7 +3382,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  function initCharts() {
  try {
  const chartColors = { purple: '#6366f1', pink: '#ec4899', green: '#10b981', amber: '#f59e0b', cyan: '#06b6d4' };
- const chartOpts = { responsive: true, maintainAspectRatio: false, plugins: { legend: { labels: { color: '#94a3b8' } } }, scales: { x: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } }, y: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } } } };
+ const chartOpts = { responsive: true, maintainAspectRatio: true, aspectRatio: 2, plugins: { legend: { labels: { color: '#94a3b8' } } }, scales: { x: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } }, y: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } } } };
  
  // Monthly trend - compute from properties if not in summary
  const monthly = rawData.summary.monthlyTrends || (() => {
