Fix: constrain Property Types doughnut chart height

--- a/ri-results.html
+++ b/ri-results.html
@@ -151,7 +151,7 @@
             <!-- Property Types -->
             <div class="chart-card">
                 <div class="chart-title"><span class="emoji">🏠</span> Property Types</div>
-                <canvas id="typeChart" height="160"></canvas>
+                <div style="height:160px;position:relative"><canvas id="typeChart"></canvas></div>
                 <div class="chart-insight" id="typeInsight"></div>
             </div>
             
