--- a/ri-results.html
+++ b/ri-results.html
@@ -26,6 +26,7 @@
         .chart-card { background: linear-gradient(135deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01)); border: 1px solid rgba(255,255,255,0.08); border-radius: 12px; padding: 1rem; transition: all 0.3s; overflow: hidden; }
         .chart-card:hover { border-color: rgba(99,102,241,0.3); }
         .chart-card canvas { max-height: 160px; }
+        #typeChart { max-height: 140px !important; }
         .chart-card.full-width { grid-column: span 2; }
         .chart-title { color: #a5b4fc; font-size: 0.85rem; font-weight: 600; margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem; }
         .chart-title .emoji { font-size: 1.2rem; }
@@ -152,7 +153,7 @@
             <!-- Property Types -->
             <div class="chart-card">
                 <div class="chart-title"><span class="emoji">🏠</span> Property Types</div>
-                <canvas id="typeChart" height="160"></canvas>
+                <div style="height:140px"><canvas id="typeChart"></canvas></div>
                 <div class="chart-insight" id="typeInsight"></div>
             </div>
             
@@ -394,7 +395,7 @@
             new Chart(document.getElementById('typeChart'), {
                 type: 'doughnut',
                 data: { labels: typeData.map(t => t[0]), datasets: [{ data: typeData.map(t => t[1]), backgroundColor: ['#6366f1', '#ec4899', '#10b981', '#f59e0b', '#06b6d4', '#8b5cf6'], borderWidth: 0 }] },
-                options: { plugins: { legend: { position: 'right', labels: { boxWidth: 12, padding: 8, font: { size: 11 } } } } }
+                options: { maintainAspectRatio: false, plugins: { legend: { position: 'right', labels: { boxWidth: 12, padding: 8, font: { size: 11 } } } } }
             });
             // Type insight
             const topType = typeData[0];
