--- a/ri-results.html
+++ b/ri-results.html
@@ -26,6 +26,7 @@
         .chart-card { background: linear-gradient(135deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01)); border: 1px solid rgba(255,255,255,0.08); border-radius: 12px; padding: 1rem; transition: all 0.3s; overflow: hidden; display: flex; flex-direction: column; }
         .chart-card:hover { border-color: rgba(99,102,241,0.3); }
         .chart-card canvas { flex: 1; min-height: 220px; }
+        .chart-card.full-width canvas { min-height: 180px; }
         .chart-card.full-width { grid-column: span 2; }
         .chart-title { color: #a5b4fc; font-size: 0.85rem; font-weight: 600; margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem; }
         .chart-title .emoji { font-size: 1.2rem; }
