Trend chart: maintainAspectRatio:false to fill container

--- a/ri-results.html
+++ b/ri-results.html
@@ -490,6 +490,7 @@
                     ]
                 },
                 options: { 
+                    maintainAspectRatio: false,
                     plugins: { legend: { labels: { boxWidth: 12 } } },
                     scales: { 
                         x: { ticks: { maxRotation: 45, font: { size: 9 } } },
