SEO: Rhode Island title, sortable columns, fix product card grid

--- a/index.html
+++ b/index.html
@@ -1634,18 +1634,21 @@
         /* Products Section */
         .products-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 2rem;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 1.5rem;
+            align-items: stretch;
         }
 
         .product-card {
             background: linear-gradient(135deg, var(--bg-card), rgba(99, 102, 241, 0.05));
             border: 1px solid var(--border);
             border-radius: 24px;
-            padding: 3rem;
+            padding: 2rem;
             position: relative;
             overflow: hidden;
             transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+            display: flex;
+            flex-direction: column;
         }
 
         .product-card:hover {
@@ -1747,10 +1750,15 @@
             left: 100%;
         }
 
-        /* Products grid responsive for 4 items */
-        @media (min-width: 1025px) {
+        /* Products grid responsive */
+        @media (max-width: 1200px) {
             .products-grid {
                 grid-template-columns: repeat(2, 1fr);
+            }
+        }
+        @media (max-width: 768px) {
+            .products-grid {
+                grid-template-columns: 1fr;
             }
         }
 
