Replace bar charts with interactive violin + scatter plots, add legend explanations

--- a/ri-report.html
+++ b/ri-report.html
@@ -567,17 +567,19 @@
  
  <h2>Property Characteristics</h2>
  <div class="chart-grid">
- <div class="chart-card">
- <div class="chart-title">🛏️ Bedrooms Distribution</div>
- <canvas id="bedsChart"></canvas>
+ <div class="chart-card full">
+ <div class="chart-title">🎻 Price by Bedrooms (Under $650K)</div>
+ <p style="color:#94a3b8;font-size:0.8rem;margin-bottom:0.5rem">Each "violin" shows price distribution. Wider = more properties at that price. Box inside shows median & quartiles. <strong>Click legend</strong> to toggle bedroom counts.</p>
+ <iframe src="ri-violin-beds.html" style="width:100%;height:500px;border:none;border-radius:8px"></iframe>
+ </div>
+ <div class="chart-card full">
+ <div class="chart-title">📈 Price vs Square Footage (Metro RI Sample)</div>
+ <p style="color:#94a3b8;font-size:0.8rem;margin-bottom:0.5rem">2,000 random properties from Providence, Cranston, Warwick, Johnston, N. Providence, N. Kingstown & E. Greenwich. Lines show price trend per city. <strong>Click legend</strong> to show/hide cities.</p>
+ <iframe src="ri-scatter-price-sqft.html" style="width:100%;height:550px;border:none;border-radius:8px"></iframe>
  </div>
  <div class="chart-card">
  <div class="chart-title">🏗️ Year Built</div>
  <canvas id="yearBuiltChart"></canvas>
- </div>
- <div class="chart-card">
- <div class="chart-title">📐 Square Footage Distribution</div>
- <canvas id="sqftChart"></canvas>
  </div>
  <div class="chart-card">
  <div class="chart-title">🌿 Land Sales by City</div>
