--- a/ri-report.html
+++ b/ri-report.html
@@ -573,8 +573,8 @@
  <iframe src="ri-violin-beds.html" style="width:100%;height:500px;border:none;border-radius:8px"></iframe>
  </div>
  <div class="chart-card full">
- <div class="chart-title">📈 Price vs Square Footage (Metro RI Sample)</div>
- <p style="color:#94a3b8;font-size:0.8rem;margin-bottom:0.5rem">2,000 random properties from Providence, Cranston, Warwick, Johnston, N. Providence, N. Kingstown & E. Greenwich. Lines show price trend per city. <strong>Click legend</strong> to show/hide cities.</p>
+ <div class="chart-title">🔥 Price vs Sqft Density (Metro RI)</div>
+ <p style="color:#94a3b8;font-size:0.8rem;margin-bottom:0.5rem">12,600+ properties from Providence, Cranston, Warwick, Johnston, N. Providence, N. Kingstown & E. Greenwich. <strong>Brighter colors = more properties</strong> at that price/sqft combo. The hot spot shows where most homes cluster.</p>
  <iframe src="ri-scatter-price-sqft.html" style="width:100%;height:550px;border:none;border-radius:8px"></iframe>
  </div>
  <div class="chart-card">
