Add 3D scatter to homepage with stratified sampling explanation

--- a/ri-report.html
+++ b/ri-report.html
@@ -577,6 +577,14 @@
  <p style="color:#94a3b8;font-size:0.8rem;margin-bottom:0.5rem">12,600+ properties from Providence, Cranston, Warwick, Johnston, N. Providence, N. Kingstown & E. Greenwich. <strong>Brighter colors = more properties</strong> at that price/sqft combo. The hot spot shows where most homes cluster.</p>
  <iframe src="ri-scatter-price-sqft.html" style="width:100%;height:550px;border:none;border-radius:8px"></iframe>
  </div>
+ <div class="chart-card full">
+ <div class="chart-title">🎯 3D Market Explorer: Size × Age × Price</div>
+ <p style="color:#94a3b8;font-size:0.8rem;margin-bottom:0.5rem"><strong>Drag to rotate • Scroll to zoom • Double-click to reset.</strong> Color = $/sqft (red = expensive per sqft, blue = affordable). Explore how square footage, year built, and price interact in 3D space.</p>
+ <iframe src="ri-3d-scatter.html" style="width:100%;height:600px;border:none;border-radius:8px"></iframe>
+ <div style="background:rgba(99,102,241,0.1);padding:1rem;border-radius:8px;margin-top:0.75rem;font-size:0.8rem;color:#94a3b8">
+ <strong style="color:#a5b4fc">📊 Sampling Method:</strong> Stratified random sample of <strong>1,500 properties</strong> from 30K total. Data split into 10 price deciles ($100K–$1.5M), then 150 randomly selected from each decile. This ensures representation across all price points while keeping the visualization performant. Formula: <code style="background:rgba(0,0,0,0.3);padding:0.2rem 0.4rem;border-radius:4px">n = min(150, count_per_decile)</code>
+ </div>
+ </div>
  <div class="chart-card">
  <div class="chart-title">🏗️ Year Built</div>
  <canvas id="yearBuiltChart"></canvas>
