Fix 3D chart: better margins, zoom, title visibility

--- a/ri-report.html
+++ b/ri-report.html
@@ -529,6 +529,36 @@
  </div>
 
  <h2>Market Trends</h2>
+ 
+ <!-- Interactive Plotly Visualizations -->
+ <p style="color:#94a3b8;margin-bottom:1.5rem">Explore Rhode Island real estate through interactive charts. Hover for details, click legends to filter, drag to pan.</p>
+ 
+ <div class="chart-grid" style="margin-bottom:1.5rem">
+ <!-- 3D Market Explorer -->
+ <div class="chart-card full" style="background:linear-gradient(135deg, rgba(99,102,241,0.1), rgba(139,92,246,0.08));border:1px solid rgba(99,102,241,0.3)">
+ <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">🎯 3D Market Explorer: Size × Age × Price</div>
+ <p style="color:#a5b4fc;font-size:0.85rem;margin-bottom:0.75rem"><strong>🖱️ Drag to rotate • Scroll to zoom • Double-click to reset.</strong> Color = $/sqft — <span style="color:#ef4444">red = expensive</span>, <span style="color:#3b82f6">blue = affordable</span>.</p>
+ <iframe src="ri-3d-scatter.html" style="width:100%;height:700px;border:none;border-radius:10px"></iframe>
+ <div style="background:rgba(0,0,0,0.2);padding:0.75rem 1rem;border-radius:6px;margin-top:0.75rem;font-size:0.8rem;color:#94a3b8">
+ <strong style="color:#a5b4fc">📊 Stratified Sample:</strong> 1,500 from 30K — 150 per price decile for scientific representation.
+ </div>
+ </div>
+ 
+ <!-- Violin Plot -->
+ <div class="chart-card full" style="background:linear-gradient(135deg, rgba(16,185,129,0.08), rgba(99,102,241,0.05));border:1px solid rgba(16,185,129,0.25)">
+ <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">🎻 Price Distribution by Bedrooms</div>
+ <p style="color:#10b981;font-size:0.85rem;margin-bottom:0.75rem">Each "violin" shows where prices cluster. Wider = more properties. <strong>Click legend</strong> to toggle bedroom counts.</p>
+ <iframe src="ri-violin-beds.html" style="width:100%;height:480px;border:none;border-radius:10px"></iframe>
+ </div>
+ 
+ <!-- Density Heatmap -->
+ <div class="chart-card full" style="background:linear-gradient(135deg, rgba(239,68,68,0.08), rgba(249,115,22,0.05));border:1px solid rgba(239,68,68,0.25)">
+ <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">🔥 Price vs Square Footage Density</div>
+ <p style="color:#f87171;font-size:0.85rem;margin-bottom:0.75rem">12,600+ Metro RI properties. <strong>Brighter = more homes</strong> at that price/sqft combo. Find the market sweet spot.</p>
+ <iframe src="ri-scatter-price-sqft.html" style="width:100%;height:520px;border:none;border-radius:10px"></iframe>
+ </div>
+ </div>
+ 
  <div class="chart-grid">
  <div class="chart-card full">
  <div class="chart-title">Monthly Sales Volume & Average Price (24 Months)</div>
