--- a/ri-report.html
+++ b/ri-report.html
@@ -554,8 +554,11 @@
  <!-- Density Heatmap -->
  <div class="chart-card full" style="background:linear-gradient(135deg, rgba(239,68,68,0.08), rgba(249,115,22,0.05));border:1px solid rgba(239,68,68,0.25)">
  <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">🔥 Price vs Square Footage Density</div>
- <p style="color:#f87171;font-size:0.85rem;margin-bottom:0.75rem">12,600+ Metro RI properties. <strong>Brighter = more homes</strong> at that price/sqft combo. Find the market sweet spot.</p>
+ <p style="color:#f87171;font-size:0.85rem;margin-bottom:0.75rem">12,600+ Metro RI properties. <strong>Brighter = more homes</strong> at that price/sqft combo. Hover for exact counts.</p>
  <iframe src="ri-scatter-price-sqft.html" style="width:100%;height:520px;border:none;border-radius:10px"></iframe>
+ <div style="background:rgba(0,0,0,0.2);padding:0.75rem 1rem;border-radius:6px;margin-top:0.75rem;font-size:0.8rem;color:#94a3b8">
+ <strong style="color:#f87171">🔥 How to read:</strong> This heatmap shows where homes cluster by size and price. The <span style="color:#ef4444">red/bright spot</span> (~1,000 sqft at $340K-$360K) is the most common combo — 99 homes sold there. The diagonal pattern shows larger homes cost more (obvious), but the <em>width</em> of the bright band reveals price variance at each size. <strong>Pro tip:</strong> Look for blue zones above the bright band — those are underpriced deals relative to size.
+ </div>
  </div>
  </div>
  
