Add deal map + improved property type violin chart

--- a/ri-report.html
+++ b/ri-report.html
@@ -617,6 +617,24 @@
  </div>
  </div>
 
+ <!-- Deal Map Section -->
+ <h2>🗺️ Deal Map</h2>
+ <div class="chart-card full" style="background:linear-gradient(135deg, rgba(34,197,94,0.08), rgba(16,185,129,0.05));border:1px solid rgba(34,197,94,0.25)">
+ <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">📍 Top Deals Across Rhode Island</div>
+ <p style="color:#22c55e;font-size:0.85rem;margin-bottom:0.75rem">Machine learning scored 30K properties. <strong>Click markers</strong> for details. Green = best deals (90+), yellow = great (80+).</p>
+ <iframe src="ri-deal-map.html" style="width:100%;height:500px;border:none;border-radius:10px"></iframe>
+ <div style="background:rgba(0,0,0,0.2);padding:0.75rem 1rem;border-radius:6px;margin-top:0.75rem;font-size:0.8rem;color:#94a3b8">
+ <strong style="color:#22c55e">🎯 Deal Score:</strong> Compares actual price vs predicted price using a Random Forest model (R²=0.72). Score of 90+ means property sold for ~90% below predicted value. <em>Note: Some are foreclosures, estate sales, or data anomalies — always verify.</em>
+ </div>
+ </div>
+
+ <!-- Property Type Violin Chart -->
+ <div class="chart-card full" style="margin-top:1.5rem;background:linear-gradient(135deg, rgba(139,92,246,0.08), rgba(99,102,241,0.05));border:1px solid rgba(139,92,246,0.25)">
+ <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">💰 Price Distribution by Property Type</div>
+ <p style="color:#a78bfa;font-size:0.85rem;margin-bottom:0.75rem">Violin plots show where prices cluster for each property type. Wider = more properties at that price. <strong>Box inside shows median + quartiles.</strong></p>
+ <iframe src="ri-violin-types.html" style="width:100%;height:470px;border:none;border-radius:10px"></iframe>
+ </div>
+
  <h2 id="sql-tool">SQL Query Tool</h2>
     <div class="sql-section">
         <button class="filter-toggle" onclick="toggleFilters(this)">Advanced Filters</button>
