Add 4-level colorful sunburst market explorer

--- a/ri-report.html
+++ b/ri-report.html
@@ -560,6 +560,16 @@
  <strong style="color:#f87171">🔥 How to read:</strong> This heatmap shows where homes cluster by size and price. The <span style="color:#ef4444">red/bright spot</span> (~1,000 sqft at $340K-$360K) is the most common combo — 99 homes sold there. The diagonal pattern shows larger homes cost more (obvious), but the <em>width</em> of the bright band reveals price variance at each size. <strong>Pro tip:</strong> Look for blue zones above the bright band — those are underpriced deals relative to size.
  </div>
  </div>
+ 
+ <!-- Sunburst Market Explorer -->
+ <div class="chart-card full" style="background:linear-gradient(135deg, rgba(245,158,11,0.08), rgba(234,179,8,0.05));border:1px solid rgba(245,158,11,0.25)">
+ <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">🧅 Market Explorer (Drill-Down Sunburst)</div>
+ <p style="color:#fbbf24;font-size:0.85rem;margin-bottom:0.75rem"><strong>Click to drill down!</strong> 4 layers: City → Property Type → Price Range → Bedrooms. Click center to zoom out.</p>
+ <iframe src="ri-sunburst.html" style="width:100%;height:650px;border:none;border-radius:10px"></iframe>
+ <div style="background:rgba(0,0,0,0.2);padding:0.75rem 1rem;border-radius:6px;margin-top:0.75rem;font-size:0.8rem;color:#94a3b8">
+ <strong style="color:#fbbf24">🧅 The Onion:</strong> Each ring is a deeper layer. Outer ring = bedrooms, then price tier, then property type, center = city. Size = number of properties. Color = count (purple=few, red=many). <strong>Providence Single Family $300-500K 3-bed</strong> is the biggest slice!
+ </div>
+ </div>
  </div>
  
  <div class="chart-grid">
