--- a/ri-report.html
+++ b/ri-report.html
@@ -2933,13 +2933,39 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  );
  const useComps = similarComps.length >= 3 ? similarComps : comps;
  
- // CONSERVATIVE: Use 25th percentile instead of average, then apply 10% haircut
+ // CONSERVATIVE: Use 25th percentile with TIERED haircut based on price
+ // Lower-priced homes need bigger buffer (fixed costs hurt more)
+ // Higher-priced homes can use smaller buffer
  const sortedPpsf = useComps.map(c => c.ppsf).sort((a, b) => a - b);
  const p25Index = Math.floor(sortedPpsf.length * 0.25);
- const conservativePpsf = sortedPpsf[p25Index]; // 25th percentile (lower estimate)
+ const p50Index = Math.floor(sortedPpsf.length * 0.50);
+ const p75Index = Math.floor(sortedPpsf.length * 0.75);
+ 
+ const conservativePpsf = sortedPpsf[p25Index]; // 25th percentile
+ const medianPpsf = sortedPpsf[p50Index]; // Median
+ const optimisticPpsf = sortedPpsf[p75Index]; // 75th percentile
+ 
+ // Tiered haircut: scales inversely with price
+ function getHaircut(price) {
+ if (price < 200000) return 0.15; // 15% - fixed costs hurt more
+ if (price < 350000) return 0.12; // 12%
+ if (price < 500000) return 0.10; // 10% - sweet spot
+ if (price < 750000) return 0.08; // 8%
+ if (price < 1000000) return 0.06; // 6%
+ return 0.05; // 5% - luxury has lower % transaction costs
+ }
+ 
+ const haircut = getHaircut(h.price);
  const rawMarketValue = h.sqft * conservativePpsf;
- const marketValue = Math.round(rawMarketValue * 0.90); // 10% haircut for repairs/closing costs
+ const marketValue = Math.round(rawMarketValue * (1 - haircut)); // Tiered haircut
+ 
+ // Also calculate scenario values for toggle display
+ const worstValue = Math.round(h.sqft * conservativePpsf * 0.85); // P25 - 15%
+ const expectedValue = Math.round(h.sqft * medianPpsf * (1 - haircut * 0.6)); // Median - smaller haircut
+ const bestValue = Math.round(h.sqft * optimisticPpsf * 0.97); // P75 - 3%
+ 
  const avgPpsf = conservativePpsf; // For display
+ const haircutPct = Math.round(haircut * 100); // For display
  const discount = Math.round((1 - h.price / marketValue) * 100);
  const instantEquity = marketValue - h.price;
  
@@ -2964,7 +2990,15 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  instantEquity: instantEquity,
  dealScore: dealScore,
  compCount: useComps.length,
- url: h.url
+ url: h.url,
+ // Scenario values for toggle
+ worstValue: worstValue,
+ worstEquity: worstValue - h.price,
+ expectedValue: expectedValue,
+ expectedEquity: expectedValue - h.price,
+ bestValue: bestValue,
+ bestEquity: bestValue - h.price,
+ haircutPct: haircutPct
  };
  }).filter(d => d && d.discount >= minDiscount);
  
@@ -3081,10 +3115,22 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  '<div style="margin-top:0.75rem"><a href="' + house.url + '" target="_blank" style="color:#6366f1">🔗 View on Redfin</a></div>' +
  '</div>' +
  '<div style="background:rgba(99,102,241,0.15);padding:1.5rem;border-radius:12px;text-align:center;margin-bottom:1.5rem;border:2px solid #10b981">' +
- '<div style="color:#94a3b8;font-size:0.9rem">Conservative Value: <strong style="color:#a5b4fc">' + formatPrice(house.marketValue) + '</strong> (25th %ile: $' + house.avgPpsf + '/sqft − 10%)</div>' +
- '<div style="color:#10b981;font-size:2.5rem;font-weight:bold;margin:0.5rem 0">' + formatPrice(house.instantEquity) + ' Est. Equity</div>' +
- '<div style="color:#64748b;font-size:0.75rem;margin-top:-0.25rem">(Conservative: 25th percentile comps − 10% buffer)</div>' +
+ '<div style="display:flex;justify-content:center;gap:0.5rem;margin-bottom:1rem">' +
+ '<button onclick="setScenario(' + idx + ',\'worst\')" id="btn-worst-' + idx + '" style="padding:0.4rem 0.8rem;border-radius:6px;border:1px solid #ef4444;background:rgba(239,68,68,0.2);color:#ef4444;cursor:pointer;font-size:0.75rem">😰 Worst</button>' +
+ '<button onclick="setScenario(' + idx + ',\'conservative\')" id="btn-conservative-' + idx + '" style="padding:0.4rem 0.8rem;border-radius:6px;border:2px solid #10b981;background:rgba(16,185,129,0.3);color:#10b981;cursor:pointer;font-size:0.75rem;font-weight:bold">🛡️ Conservative</button>' +
+ '<button onclick="setScenario(' + idx + ',\'expected\')" id="btn-expected-' + idx + '" style="padding:0.4rem 0.8rem;border-radius:6px;border:1px solid #3b82f6;background:rgba(59,130,246,0.2);color:#3b82f6;cursor:pointer;font-size:0.75rem">📊 Expected</button>' +
+ '<button onclick="setScenario(' + idx + ',\'best\')" id="btn-best-' + idx + '" style="padding:0.4rem 0.8rem;border-radius:6px;border:1px solid #f59e0b;background:rgba(245,158,11,0.2);color:#f59e0b;cursor:pointer;font-size:0.75rem">🌟 Best</button>' +
+ '</div>' +
+ '<div id="scenario-label-' + idx + '" style="color:#94a3b8;font-size:0.9rem">Conservative Value: <strong style="color:#a5b4fc">' + formatPrice(house.marketValue) + '</strong> (25th %ile: $' + house.avgPpsf + '/sqft − ' + house.haircutPct + '%)</div>' +
+ '<div id="scenario-equity-' + idx + '" style="color:#10b981;font-size:2.5rem;font-weight:bold;margin:0.5rem 0">' + formatPrice(house.instantEquity) + ' Est. Equity</div>' +
+ '<div id="scenario-desc-' + idx + '" style="color:#64748b;font-size:0.75rem;margin-top:-0.25rem">(Conservative: 25th percentile comps − ' + house.haircutPct + '% tiered buffer)</div>' +
  '<div style="color:#f59e0b;font-size:1.1rem">' + house.discount + '% below market • ' + house.dom + ' days on market</div>' +
+ '<div style="margin-top:0.75rem;display:grid;grid-template-columns:repeat(4,1fr);gap:0.5rem;font-size:0.7rem;color:#64748b">' +
+ '<div>😰 Worst<br><span style="color:#ef4444">' + formatPrice(house.worstEquity) + '</span></div>' +
+ '<div>🛡️ Conservative<br><span style="color:#10b981">' + formatPrice(house.instantEquity) + '</span></div>' +
+ '<div>📊 Expected<br><span style="color:#3b82f6">' + formatPrice(house.expectedEquity) + '</span></div>' +
+ '<div>🌟 Best<br><span style="color:#f59e0b">' + formatPrice(house.bestEquity) + '</span></div>' +
+ '</div>' +
  '</div>' +
  '<h4 style="color:#a5b4fc;margin-bottom:0.75rem"> Offer Strategy</h4>' +
  '<div style="display:grid;grid-template-columns:repeat(3,1fr);gap:0.75rem;margin-bottom:1.5rem">' +
@@ -3180,6 +3226,69 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
    </div>`;
    
    document.body.appendChild(modal);
+ }
+ 
+ // Scenario Toggle Handler
+ function setScenario(idx, scenario) {
+ const house = window.houseDealsData[idx];
+ if (!house) return;
+ 
+ const scenarios = {
+ worst: {
+ value: house.worstValue,
+ equity: house.worstEquity,
+ label: 'Worst Case',
+ desc: '25th percentile − 15% worst-case buffer',
+ color: '#ef4444',
+ icon: '😰'
+ },
+ conservative: {
+ value: house.marketValue,
+ equity: house.instantEquity,
+ label: 'Conservative',
+ desc: '25th percentile − ' + house.haircutPct + '% tiered buffer',
+ color: '#10b981',
+ icon: '🛡️'
+ },
+ expected: {
+ value: house.expectedValue,
+ equity: house.expectedEquity,
+ label: 'Expected',
+ desc: 'Median comps − reduced buffer',
+ color: '#3b82f6',
+ icon: '📊'
+ },
+ best: {
+ value: house.bestValue,
+ equity: house.bestEquity,
+ label: 'Best Case',
+ desc: '75th percentile − 3% minimal buffer',
+ color: '#f59e0b',
+ icon: '🌟'
+ }
+ };
+ 
+ const s = scenarios[scenario];
+ 
+ // Update display
+ document.getElementById('scenario-label-' + idx).innerHTML = 
+ s.label + ' Value: <strong style="color:' + s.color + '">' + formatPrice(s.value) + '</strong>';
+ document.getElementById('scenario-equity-' + idx).innerHTML = 
+ '<span style="color:' + s.color + '">' + formatPrice(s.equity) + '</span> Est. Equity';
+ document.getElementById('scenario-desc-' + idx).textContent = '(' + s.desc + ')';
+ 
+ // Update button styles
+ ['worst', 'conservative', 'expected', 'best'].forEach(sc => {
+ const btn = document.getElementById('btn-' + sc + '-' + idx);
+ if (btn) {
+ const isActive = sc === scenario;
+ btn.style.fontWeight = isActive ? 'bold' : 'normal';
+ btn.style.borderWidth = isActive ? '2px' : '1px';
+ btn.style.background = isActive ? 
+ 'rgba(' + (sc === 'worst' ? '239,68,68' : sc === 'conservative' ? '16,185,129' : sc === 'expected' ? '59,130,246' : '245,158,11') + ',0.3)' :
+ 'rgba(' + (sc === 'worst' ? '239,68,68' : sc === 'conservative' ? '16,185,129' : sc === 'expected' ? '59,130,246' : '245,158,11') + ',0.1)';
+ }
+ });
  }
  
  function getNearbyProperties(lat, lng, radiusMiles, excludeAddress) {
