Add 4 individual price analysis charts in 2x2 grid

--- a/ri-report.html
+++ b/ri-report.html
@@ -572,6 +572,40 @@
  </div>
  </div>
  
+ <!-- NEW: Price Analysis Grid (2x2) -->
+ <h3 style="color:#e2e8f0;margin:2rem 0 1rem;font-size:1.3rem">📊 Price Analysis Deep Dive</h3>
+ <p style="color:#94a3b8;margin-bottom:1rem">Four interactive views of Rhode Island's $470K median market.</p>
+ 
+ <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:1rem;margin-bottom:2rem">
+ <!-- Price Tiers -->
+ <div class="chart-card" style="background:linear-gradient(135deg, rgba(46,204,113,0.08), rgba(52,152,219,0.05));border:1px solid rgba(46,204,113,0.25)">
+ <div class="chart-title" style="font-size:1rem;color:#e2e8f0">🏠 Price Distribution by Tier</div>
+ <p style="color:#2ecc71;font-size:0.8rem;margin-bottom:0.5rem">From starter homes to luxury — see where the market clusters.</p>
+ <iframe src="ri-price-tiers.html" style="width:100%;height:420px;border:none;border-radius:8px"></iframe>
+ </div>
+ 
+ <!-- Affordability -->
+ <div class="chart-card" style="background:linear-gradient(135deg, rgba(52,152,219,0.08), rgba(155,89,182,0.05));border:1px solid rgba(52,152,219,0.25)">
+ <div class="chart-title" style="font-size:1rem;color:#e2e8f0">💰 Affordability by Salary</div>
+ <p style="color:#3498db;font-size:0.8rem;margin-bottom:0.5rem">What % of homes can you afford? Based on 3.5x salary rule.</p>
+ <iframe src="ri-affordability.html" style="width:100%;height:420px;border:none;border-radius:8px"></iframe>
+ </div>
+ 
+ <!-- Market Share -->
+ <div class="chart-card" style="background:linear-gradient(135deg, rgba(155,89,182,0.08), rgba(231,76,60,0.05));border:1px solid rgba(155,89,182,0.25)">
+ <div class="chart-title" style="font-size:1rem;color:#e2e8f0">📈 Market Share by Price Range</div>
+ <p style="color:#9b59b6;font-size:0.8rem;margin-bottom:0.5rem">Where's the inventory? $300-500K dominates with 43%.</p>
+ <iframe src="ri-market-share.html" style="width:100%;height:420px;border:none;border-radius:8px"></iframe>
+ </div>
+ 
+ <!-- Log Scale -->
+ <div class="chart-card" style="background:linear-gradient(135deg, rgba(26,188,156,0.08), rgba(46,204,113,0.05));border:1px solid rgba(26,188,156,0.25)">
+ <div class="chart-title" style="font-size:1rem;color:#e2e8f0">📉 Log-Scale Distribution</div>
+ <p style="color:#1abc9c;font-size:0.8rem;margin-bottom:0.5rem">See the full range from $100K to $5M+ with percentile markers.</p>
+ <iframe src="ri-price-log.html" style="width:100%;height:420px;border:none;border-radius:8px"></iframe>
+ </div>
+ </div>
+ 
  <div class="chart-grid">
  <div class="chart-card full">
  <div class="chart-title">Monthly Sales Volume & Average Price (24 Months)</div>
