--- a/ri-report.html
+++ b/ri-report.html
@@ -574,17 +574,17 @@
  
  <!-- Price Analysis Grid (2x2 compact squares) -->
  <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:0.75rem;margin:1.5rem 0">
- <div style="background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
- <iframe src="ri-price-tiers.html" style="width:100%;height:280px;border:none"></iframe>
+ <div style="border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
+ <iframe src="ri-price-tiers.html" style="width:100%;height:280px;border:none" scrolling="no"></iframe>
  </div>
- <div style="background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
- <iframe src="ri-affordability.html" style="width:100%;height:280px;border:none"></iframe>
+ <div style="border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
+ <iframe src="ri-affordability.html" style="width:100%;height:280px;border:none" scrolling="no"></iframe>
  </div>
- <div style="background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
- <iframe src="ri-market-share.html" style="width:100%;height:280px;border:none"></iframe>
+ <div style="border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
+ <iframe src="ri-market-share.html" style="width:100%;height:280px;border:none" scrolling="no"></iframe>
  </div>
- <div style="background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
- <iframe src="ri-price-log.html" style="width:100%;height:280px;border:none"></iframe>
+ <div style="border:1px solid rgba(255,255,255,0.1);border-radius:8px;overflow:hidden">
+ <iframe src="ri-price-log.html" style="width:100%;height:280px;border:none" scrolling="no"></iframe>
  </div>
  </div>
  
